// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user reducer should handle LOGOUT_USER 1`] = `
Object {
  "access_token": "",
  "display_name": "",
  "id": "",
  "isLogged": false,
}
`;

exports[`user reducer should handle SET_ACCESS_TOKEN 1`] = `
Object {
  "access_token": "Test",
  "display_name": "",
  "id": "",
  "isLogged": false,
}
`;

exports[`user reducer should handle SET_USER_INFORMATION 1`] = `
Object {
  "access_token": "",
  "display_name": "Test",
  "id": "TestId",
  "isLogged": true,
}
`;

exports[`user reducer should handle initial state 1`] = `
Object {
  "access_token": "",
  "display_name": "",
  "id": "",
  "isLogged": false,
}
`;
